# "aci_png" - Aldaron's Codec Interface / PNG
#                             _        _
#                            /@\——————/@\
# .———  .                   |   o    o   |     .————      .            .
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   .
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   |
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |
#                 |        \              /                              __/
#                           ¯————————————¯
#
# Copyright Jeron A. Lau 2017-2018.
# Distributed under the Boost Software License, Version 1.0.  (See accompanying
# file LICENSE or copy at https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "aci_png"
version = "0.7.0"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>"
]
license = "BSL-1.0"
documentation = "https://docs.rs/aci_png"
homepage = "https://gitlab.com/plopgrizzly/multimedia"
repository = "https://gitlab.com/plopgrizzly/multimedia/aci_png"
readme = "README.md"
description = "Encode and decode png and apng(TODO) image files."
keywords = ["image", "png", "codec", "parse", "decoder"]
categories = ["encoding", "parsing", "data-structures", "multimedia"]

[dependencies]
afi = "0.7"
deflate = "0.7"
inflate = "0.4"
byteorder = "1.2"
